// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PokemonPage component debe hacer match con el snapshot 1`] = `
<h1>Espere por favor...</h1>
<!--Si no quiero un div adicional por motivos de diseño para que no aparezca en el
  html puedo sustituirlo por template-->
<!--v-if-->
`;

exports[`PokemonPage component debe hacer match con snapshot cuando cargan los pokemons 1`] = `
<div>
  <h1>¿Quién es este Pokémon?</h1>
  <pokemon-picture-stub pokemonid="5" showpokemon="false"></pokemon-picture-stub>
  <pokemon-options-stub pokemons="[object Object],[object Object],[object Object],[object Object]"></pokemon-options-stub>
</div>
<!--Si no quiero un div adicional por motivos de diseño para que no aparezca en el
  html puedo sustituirlo por template-->
<!--v-if-->
`;
